Revision history for Perl module XML::RSS
 
1.40 - December 1, 2008
    - Now outputting an arrayref of <skipDays>/<day>'s and <skipHours>/<hours>
    properly.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40978
    - Now parsing multiple <category>'ies inside an <item> into an
    array-reference.
        - http://rt.cpan.org/Ticket/Display.html?id=38296
    - Now outputting an arayref of <item>/<category> prpoerly.
        - http://rt.cpan.org/Ticket/Display.html?id=38296
    - Parsing multiple <channel>/<category> into arrays.
        - http://rt.cpan.org/Public/Bug/Display.html?id=9729
    - Rendering multiple <channel>/<category> elements from array refs.
        - http://rt.cpan.org/Public/Bug/Display.html?id=9729
    - Now parsing multiple dc:items into an array 
    reference (at least inside an <item>):
        - http://rt.cpan.org/Public/Bug/Display.html?id=6000
    - Added the modules_as_arrays option to parse repeatable module elements
    into an array ref.
        

1.38 - November 27, 2008
    - Added support for duplicate items of RSS modules.
        - http://rt.cpan.org/Public/Bug/Display.html?id=4495
    - Added support for multiple Dublin Core elements. One can point
    the field to an array and it will create multiple elements:
        - http://rt.cpan.org/Public/Bug/Display.html?id=6000
    - Now parsing several <skipDays>/<day>s and <skipHours>/<hour>s into
    an array reference instead of concatenating them together.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40978

1.37 - November 18, 2008
    - Extracted the common parts of parse() and parsefile() into one
    method (Refactoring - Shlomi Fish)
    - Incorporated a modified version of a patch from Simon Wistow to
    add support for the "xml:base" attribute.
    - Renamed t/items-are-0.t into the more descriptive 
    t/test-generated-items.t , to highlight its significance and make
    it easier to notice.