@@ -41,6 +41,7 @@ sub make_rss
 	$rss->channel(
 		title => 'Test RSS',
 		link  => 'http://www.example.com',
+        description => "Hello",
 		);
 		
 	}
