@@ -1,5 +1,9 @@
 Revision history for Perl module XML::RSS
  
+    - Made the default keys for the channel link, description and title undef 
+    instead of ''. They become '' once they are opened.
+        - http://rt.cpan.org/Public/Bug/Display.html?id=40686
+
 1.40 - December 1, 2008
     - Now outputting an arrayref of <skipDays>/<day>'s and <skipHours>/<hours>
     properly.
